Refactor part II of stack